2004-10-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaboutdialog.c (gtk_about_dialog_destroy): Don't leak
	the secondary dialogs.  (#155084, Paolo Borelli)

	* gtk/gtkhsv.c (gtk_hsv_expose): Fix redraw issues with the
	focus on the ring. 

2004-10-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksizegroup.c (do_size_request): Unset GTK_REQUEST_NEEDED
	before emitting ::size-request, following this weeks discussion
	on gtk-devel-list@gnome.org.

	* gtk/gtkcellview.c (gtk_cell_view_get_size_of_row): Restore 
	the size info for the current row after measuring another 
	row.  (#154945, William Jon McCann)

2004-10-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_remove_rows): Don't
	get text unnecessarily.  (#155384, Morten Welinder)
	(gtk_file_chooser_default_finalize): Don't forget to
	unref the tooltips.  (#155412, Morten Welinder)
	(shortcuts_add_current_folder): Don't leak volume. (#155400,
	Morten Welinder)

2004-10-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcontainer.c (_gtk_container_queue_resize): Acknowledge 
	the fact that invariants are broken and loop all the way up to 
	the resize container.

Tue Oct 12 17:11:02 2004    <timj@birnet.org>

	* gtk/gtkwidget.c (gtk_widget_set_usize_internal): don't queue the
	widget for resize or emit change notification if the usize didn't
	change. this works around a buggy signal connection in #155139.

2004-10-11  Matthias Clasen  <matthias@localhost.localdomain>

	* docs/tools/widgets.c: Create scrolledwindow, statusbar, 
	scale and image images. 

2004-10-10  Matthias Clasen  <matthias@localhost.localdomain>

	* docs/tools/widgets.c: Create a toolbar, menubar, progressbar,
	notebook and messagedialog images.

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_select_all): 
	Avoid a warning.

Sun Oct 10 11:24:56 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcontainer.h (struct _GtkContainer): add /*< private >*/
	markings.
