@@ -1,3 +1,8 @@
+2004-10-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkaboutdialog.c (gtk_about_dialog_new): Destroy secondary
+	dialogs if the main dialog is hidden. (#155084, Paolo Borelli)
+
 2004-10-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkaboutdialog.c (gtk_about_dialog_destroy): Don't leak
